crates/keron-lang/tests/corpus/errors/parse/empty_interpolation.snap
---
source: crates/keron-lang/tests/harness/mod.rs
assertion_line: 75
---
error: found '}' expected something else, '#', '-', '"', '"true"', '"false"', '"null"', int, '[', '{', '"if"', '"for"', '"match"', identifier, or '('
  --> 1:12
  |
1 | val a = "${}"
  |            ^
